--- a/app/assets/stylesheets/modules/_product_exhibit.scss
+++ b/app/assets/stylesheets/modules/_product_exhibit.scss
@@ -142,6 +142,8 @@
           padding:50px 0;
           background: $light-gray;
           border:thin dashed gray;
+          cursor: pointer;
+          cursor: hand;
         }
       }
     }
@@ -150,6 +152,7 @@
 
 
 .hidden {
+  display: none;
   visibility: hidden;
 }
 
